# Murder-Mystery-at-the-Railroad-Station

./: README.md  main.py  mystery.py  pyproject.toml  run.py
book/: pdf_gen.py
grammar/: engine.py
grammar/corpora/: _README.txt  activities.txt  appliances.txt  art_isms.txt  books.txt  clothes.txt  countries.txt  fabrics.txt  forenames.txt  fruits.txt  gemstones.txt  instruments.txt  interjections.txt  military_operation_codenames.txt  monsters.txt  musical_genres.txt  nsa_project_codenames.txt  occupations.txt  pokemon.txt  prefixes.txt  rooms.txt  scientists.txt  seas.txt  settings.txt  sports.txt  suffixes.txt  surnames.txt  time_units.txt  vegetables.txt  vehicles.txt  verbs_past.txt  wrestling_moves.txt
grammar/grammars/: mystery_grammar.txt
rule_system/: compiler.py  config.py  engine.py  entity.py  rules.py  utils.py
rule_system/content/: mystery_domain.txt  mystery_rules.txt
